# PWC

./: .gitignore  CHANGELOG.md  LICENSE  README.md  asfp.cabal  extract.py  pmc.cabal  pwc.cabal  requirements.txt
app/: Main.hs
model/: llm.py
