cabal-version:      2.4
name:               pmc
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Hyunsoo Shin
maintainer:         hyunsooda@kaist.ac.kr

extra-source-files:
    CHANGELOG.md
    README.md

executable pmc
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.0.0,
        bytestring >=0.11.3.1,
        wreq >=0.5.3.3,
        lens >=5.2,
        filepath >=1.4.2.2,
        exceptions >=0.10.5,
        ansi-terminal >=0.11.4,
        directory >=1.3.7.1,
        mtl >=2.3.1,
        optparse-applicative >=0.17.0.0,
        process >=1.6.15.0,
    hs-source-dirs:   app
    default-language: Haskell2010
